# Ecosystem_simulator

./: .gitignore  CMakeLists.txt  readme.md
GUI/: c_bridge.py  elements.py  gui.py
engine/: CMakeLists.txt
engine/include/: consts.h  params.h  rabbit_logic.h  rng.h  utils.h  wolf_logic.h
engine/shared/: animal.h  engine.h  island.h  rabbit.h  wolf.h
engine/source/: engine.c  rabbit_logic.c  rng.c  utils.c  wolf_logic.c
engine/test/: basic.c  engine_sample.c  generate_rabits.c
